# helios

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Contributors.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_request.md  feature_request.md  other_request.md
.github/workflows/: ci.yml  greetings.yml  stale.yml
apps/linux-agent/: pyproject.toml
apps/linux-agent/src/helios_agent/: __init__.py  cli.py  runtime.py
backend/: package-lock.json  package.json  server.js
backend/Model/: user.js
docs/: llm-development.md
docs/adr/: 0001-product-architecture.md  0002-local-first-privacy.md
docs/product/: go-to-market.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Market.jsx  marketview.jsx  recordview.jsx  tableview.jsx
frontend/src/components/Agri/: LandForm.jsx  LandView.jsx
frontend/src/components/Dashboard/: Dashboard.jsx  Widgets.jsx  stats.jsx
frontend/src/pages/: Login.jsx  SignUp.jsx
ops/: Containerfile.agent-dev  Containerfile.control-plane
packaging/appimage/: README.md
packaging/deb/: README.md
packaging/flatpak/: README.md
packaging/rpm/: README.md
scripts/: check_structure.sh
services/control-plane/: pyproject.toml
services/control-plane/src/helios_control_plane/: __init__.py  app.py  settings.py
tests/unit/: test_agent_runtime.py  test_intents.py  test_permissions.py
(+13 files in other folders)
